# YoutubeTranscriptAI

./: .dockerignore  .env  .env.example  .replit  ADVANCED_FEATURES.md  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  README.md  app.py  chat_handler.py  docker-compose.yml  pyproject.toml  requirements-full.txt  youtube_utils.py
backend/: __init__.py  advanced_rag.py  database.py  enhanced_chat_handler.py  evaluation_system.py  study_guide_generator.py  vector_manager.py  youtube_transcripts.db
